# KnowledgeDeckAIPlatform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  note-todo.md  requirements.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: cli.py  main.py  startup.py
backend/app/api/: admin.py  auth.py  chat.py  deps.py  files.py  health.py  knowledge_bases.py  llm_info.py  slide_sessions.py  slides.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_kb_files.py  0003_chat.py  0004_slides.py  0005_slide_sessions.py  0006_template_files.py  0007_visual_template.py
backend/app/features/chat/api/: chat.py
backend/app/features/chat/services/: chat_service.py
backend/app/features/rag/api/: admin.py
backend/app/services/: __init__.py  chat_service.py  document_parser.py  file_service.py  ingestion.py  knowledge_base_service.py  model_clients.py  object_storage.py  presenton_client.py  qdrant_store.py  rag.py  slide_chat_service.py  slide_service.py  text_splitter.py
backend/app/shared/api/: auth.py  llm_info.py
backend/app/shared/services/: auth_service.py
backend/tests/: conftest.py  test_auth_login.py  test_auth_me.py  test_auth_service.py  test_cli.py  test_config.py  test_cors.py  test_deps.py  test_files_list_delete.py  test_files_upload.py  test_health.py  test_knowledge_bases.py  test_migration.py  test_model_clients.py  test_models.py  test_models_kb_files.py  test_object_storage.py  test_seed_user.py
(+61 files in other folders)
