[project]
name = "knowledgedeck-backend"
version = "0.1.0"
description = "FastAPI backend for KnowledgeDeck AI Platform"
requires-python = ">=3.11"

# Runtime + dev dependencies live in requirements.txt and requirements-dev.txt
# (consumed by the Dockerfile). pyproject.toml only carries metadata + tool
# config from this point forward.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
